[package]
name = "heed-perfs-put-reserved"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
fastrand = "2.0.1"
# heed = "0.20.0-alpha.4"
heed = { git = "https://github.com/meilisearch/heed", branch = "put-reserved-maybe-uninit" }
# roaring = "0.10.2"
roaring = { git = "https://github.com/RoaringBitmap/roaring-rs", branch = "serialize-into-slice" }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v5", "v4"] }
